<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/mainActivityDrawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?android:attr/actionBarSize"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/im_hungry_toolbartitle"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="21sp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                app:queryHint="Search restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:showAsAction="always" />
        </com.google.android.material.appbar.MaterialToolbar>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="48dp"
            android:background="@android:color/white"></FrameLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:itemBackground="@color/colorPrimary"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            app:itemIconTint="#000000"
            app:itemTextColor="#000000"
            app:menu="@menu/nav_menu"
            android:layout_marginTop="-48dp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navDrawerLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#99E8C5"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/drawerLayoutMainImageView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:background="@drawable/defaultdrawerlayoutimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/usernameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/ripple_effect"
            android:onClick="handleNavDrawerItemClicks"
            android:padding="20dp"
            android:text="@string/user_name"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/drawerLayoutMainImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drawerLayoutMainImageView"
            app:layout_constraintVertical_bias="0.398" />

        <TextView
            android:id="@+id/userEmailTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/ripple_effect"
            android:onClick="handleNavDrawerItemClicks"
            android:padding="20dp"
            android:text="@string/user_email"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31" />

        <TextView
            android:id="@+id/yourLunchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99E8C5"
            android:drawableStart="@drawable/your_lunch_icon"
            android:foreground="@drawable/ripple_effect"
            android:onClick="handleNavDrawerItemClicks"
            android:padding="20dp"
            android:text="@string/your_lunch"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.46" />

        <TextView
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99E8C5"
            android:drawableStart="@drawable/settings"
            android:foreground="@drawable/ripple_effect"
            android:onClick="handleNavDrawerItemClicks"
            android:padding="20dp"
            android:text="@string/settings"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581" />

        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99E8C5"
            android:drawableStart="@drawable/logout_icon"
            android:foreground="@drawable/ripple_effect"
            android:onClick="handleNavDrawerItemClicks"
            android:padding="20dp"
            android:text="@string/logout"
            android:textAlignment="viewEnd"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.682" />

        <ImageView
            android:id="@+id/currentUserImageView"
            android:layout_width="95dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254"
            app:srcCompat="@drawable/defaultprofilepicture" />

        <ImageView
            android:id="@+id/drawerLayoutIcon"
            android:layout_width="119dp"
            android:layout_height="117dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.969"
            app:srcCompat="@drawable/loginactivitylogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>