...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainInfoStripeImageview"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageOfRestaurant"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        app:layout_constraintBottom_toTopOf="@+id/mainInfoStripeImageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
...
